[project]
name = "surface-cv"
version = "0.1.0"
description = ""
authors = [
    {name = "AlessioToniolo",email = "atoniolo76@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "surface_cv", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
