[project]
name = "surface-cv"
version = "0.1.0"
description = ""
authors = [
    {name = "AlessioToniolo",email = "atoniolo76@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pyrealsense2 (>=2.55.1.6486,<3.0.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]

[tool.poetry]
packages = [{include = "surface_cv", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
